--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
 }
 
 .App-logo {
@@ -35,4 +35,70 @@
   to {
     transform: rotate(360deg);
   }
+}
+/* custom css */
+
+.container {
+  width: 70%;
+  height: 100px;
+  margin-left: 15%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.padd {
+  padding: 15px;
+}
+
+.search-field {
+  width: 100%;
+  height: 40px;
+  font-size: 18px;
+  text-indent: 20px;
+  border-radius: 10px;
+  border: 1px solid gray;
+  outline: none;
+}
+
+.movie {
+  margin-top: 30px;
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.poster {
+  height: 550px;
+  width: 30%;
+  overflow: hidden;
+}
+
+.poster-img {
+  width: 100%;
+  background-size: cover;
+}
+
+.details {
+  height: 500px;
+  width: 60%;
+}
+.padd p {
+  font-size: 20px;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+.ratings {
+  display: flex;
+  justify-content: left;
+}
+
+.ratings > div {
+  margin-right: 50px;
+}
+
+strong{
+  margin-right: 10px;
 }
